Bug de superposition des div avec video -> z-index ne fonctionne pas toujours avec HTML5

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
 }
 
 code {
@@ -13,25 +15,27 @@ code {
 }
 
 #ButtonAccueil {
+  z-index: 1;
   width: 100%;
   border-bottom: 1px solid gray;
   font-size: 18px;
   text-align: center;
   padding: 5px;
 
-
 }
 
 .modal {
-
+  z-index: 1;
   font-size: 12px;
 }
+
 .modal > .header {
   width: 100%;
   border-bottom: 1px solid gray;
   font-size: 18px;
   text-align: center;
   padding: 5px;
+
 }
 .modal > .content {
   width: 100%;
@@ -45,7 +49,6 @@ code {
 }
 .modal > .close {
   cursor: pointer;
-  position: absolute;
   display: block;
   padding: 2px 5px;
   line-height: 20px;
@@ -57,11 +60,19 @@ code {
   border: 1px solid #cfcece;
 }
 
-canvas {
-  display: block;
-  vertical-align: bottom;
+
+video {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  opacity: 50%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+
 }
 
-video{
-  opacity: 50%;
-}
+
